# synkrino

./: .gitignore  pyproject.toml  setup.py
synkrino/: __init__.py  __main__.py
